fix 'write': append data instead of override at Shard